# eco-grant-writer-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  api_server.py  app.py  grant_requirements.json  mcp_server.py  pyproject.toml  styles.py
.example/output/: PROPOSAL.md
grant_writer/: __init__.py  agent.py  config.py  llm.py  models.py
grant_writer/.adk/: session.db
grant_writer/nodes/: __init__.py  assembler.py  compliance_auditor.py  grant_matcher.py  intake.py  respond.py  router.py  section_drafter.py  security_guardrail.py  show.py
grant_writer/prompts/: __init__.py  compliance.py  drafter.py  intake.py  judge.py  orchestrator.py
grant_writer/security/: __init__.py  judge.py  pii_scrubber.py
grant_writer/tools/: __init__.py  budget.py  currency.py  ngo_validator.py
tests/: conftest.py  test_compliance.py  test_flow.py  test_guardrail.py  test_integration.py  test_llm_fallback.py  test_models.py  test_orchestrator.py  test_pii_scrubber.py  test_tools.py
web/: README.md
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChatInput.tsx  ChatPanel.tsx  CustomNotesInput.tsx  DocumentPreview.tsx  Navbar.tsx  SecurityModal.tsx  Sidebar.tsx  TemplateCards.tsx
web/src/hooks/: useAgent.ts
web/src/lib/: api.ts  types.ts
web/src/utils/: markdown.ts
